[tool.poetry]
name = "cloud-run-python"
version = "0.1.0"
description = ""
authors = ["Ben Poppy <ben.poppy78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.18.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
